--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,17 @@
-casadi==3.5.5
-clarabel==0.9.0
+casadi==3.6.5
+contourpy==1.2.1
 cycler==0.12.1
-ecos==2.0.14
+fonttools==4.53.1
 kiwisolver==1.4.5
-matplotlib==3.4.3
-networkx==3.2.1
-numpy==1.21.2
-osqp==0.6.7
-pillow==10.3.0
-polytope==0.2.3
+matplotlib==3.9.1
+networkx==3.3
+numpy==2.0.0
+packaging==24.1
+pillow==10.4.0
+polytope==0.2.5
 pyparsing==3.1.2
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.13.0
 python-dateutil==2.9.0.post0
-PyYAML==6.0.1
-qdldl==0.1.7.post3
-scipy==1.7.1
-scs==3.2.4.post3
+scipy==1.14.0
 six==1.16.0
+tqdm==4.66.4
+typing==3.7.4.3
